[tool.poetry]
name = "autonote"
version = "0.1.2"
description = "Automate taking notes"
authors = ["Masato Naka"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
atlassian-python-api = "^3.32.1"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
myst-nb = {version = "^0.17.1", python = "^3.9"}
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"
python-dotenv = "^0.21.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
